Tomcat-DB/dnsutils.yml
apiVersion: v1
kind: Pod
metadata:
  name: dnsutils
  labels:
    app: dnsutils
spec:
  containers:
  - name: dnsutils
    image: tutum/dnsutils
    # ports:
    # - containerPort: 80
    command: ["/bin/sh", "-ec", "while :; do echo '.'; sleep 5 ; done"]
