Tomcat-DB/web-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: web-ingress
  labels:
    app: web
spec:
  rules:
  - host: hellonginx.io
    http:
      paths:
      - pathType: Prefix
        path: "/v2"
        backend:
          service:
            name: web
            port: 
              number: 80
status:
  loadBalancer:
    ingress:
      - ip: 10.206.16.254
